--- a/sass/style.sass
+++ b/sass/style.sass
@@ -7,3 +7,12 @@
 @import './components/ctaContributor'
 // Elements
 @import './elements/ctaButton'
+
+
+
+//Posts
+@import './post/post'
+
+//Post elements  
+@import './post/blockQuote'
+@import './post/cardAuthor'
