--- a/sass/components/profileCard.sass
+++ b/sass/components/profileCard.sass
@@ -24,7 +24,10 @@ $bg-light: rgb(248, 248, 248)
     padding: 1% 2%
     font-weight: bold
     margin: 3%
-
+    
+    a
+      text-decoration: none
+      
   img
     max-width: 100%
     max-height: 50%
