--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;0,700;0,800;1,800&display=swap");
 * {
@@ -26,6 +27,9 @@
   padding: 1% 2%;
   font-weight: bold;
   margin: 3%;
+}
+.card button a {
+  text-decoration: none;
 }
 .card img {
   max-width: 100%;
@@ -501,6 +505,186 @@
 .ctaButton a:active .line.-bottom {
   transition: transform 0.5s cubic-bezier(0, 0.53, 0.29, 1) 0.56s;
   transform-origin: left;
+}
+
+.contentWrapper {
+  display: flex;
+  flex-direction: column;
+}
+.contentWrapper p {
+  padding: 2%;
+  margin: 5%;
+  font-size: 2vw;
+}
+.contentWrapper h1 {
+  font-size: 5vw;
+  padding: 2%;
+  color: #0080ac;
+}
+
+.heroWrapper {
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+  background-color: red;
+  display: flex;
+  justify-content: center;
+  background-image: url("../../wow.jpg");
+  object-fit: contain;
+}
+.heroWrapper .heroTitle {
+  z-index: 99;
+  position: absolute;
+  font-size: 5vw;
+  color: white;
+  bottom: 5%;
+  left: 5%;
+  width: 50%;
+}
+.heroWrapper .etiqueteBox {
+  position: absolute;
+  font-size: 2vw;
+  color: white;
+  bottom: 5%;
+  right: 5%;
+  display: flex;
+  flex-direction: row;
+}
+.heroWrapper h2 {
+  border: 0.3vw solid white;
+  border-radius: 5px;
+  margin: 2%;
+  padding: 2%;
+}
+
+.incipitBox {
+  border-radius: 5px;
+  margin: 2%;
+  background-color: #0080ac;
+  color: white;
+  font-size: 1.5em;
+}
+
+.quote-wrapper {
+  width: 300px;
+  height: 300px;
+  position: relative;
+  margin: 10vh auto 0;
+  /*OPTIONAL MARGIN */
+}
+
+.text {
+  width: 100%;
+  height: 100%;
+  /*BLUE BG */
+  background: radial-gradient(ellipse at center, #1babdb 0%, #0080ac 70%, rgba(0, 128, 172, 0) 70.3%);
+  /*RED BG
+  * *background: radial-gradient(
+  * *  ellipse at center,
+  * *  rgba(210, 20, 20, 1) 0%,
+  * *  rgba(210, 20, 20, 1) 70%,
+  * *  rgba(210, 20, 20, 0) 70.3%
+  * *); */
+  position: relative;
+  margin: 0;
+  color: white;
+}
+.text p {
+  height: 100%;
+  font-size: 21px;
+  line-height: 1.25;
+  padding: 0;
+  text-align: center;
+  font-style: italic;
+  text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.3);
+}
+.text::before {
+  content: "";
+  width: 50%;
+  height: 100%;
+  float: left;
+  shape-outside: polygon(0 0, 98% 0, 50% 6%, 23.4% 17.3%, 6% 32.6%, 0 50%, 6% 65.6%, 23.4% 82.7%, 50% 94%, 98% 100%, 0 100%);
+  shape-margin: 7%;
+}
+.text p::before {
+  content: "";
+  width: 50%;
+  height: 100%;
+  float: right;
+  shape-outside: polygon(2% 0%, 100% 0%, 100% 100%, 2% 100%, 50% 94%, 76.6% 82.7%, 94% 65.6%, 100% 50%, 94% 32.6%, 76.6% 17.3%, 50% 6%);
+  shape-margin: 7%;
+}
+
+.quote-wrapper blockquote footer {
+  width: 100%;
+  position: absolute;
+  bottom: 25px;
+  font-size: 17px;
+  text-align: center;
+  font-style: italic;
+  text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.3);
+}
+.quote-wrapper::before {
+  content: "“";
+  font-size: 270px;
+  height: 82px;
+  line-height: 0.78;
+  line-height: 1;
+  position: absolute;
+  top: -48px;
+  left: 0;
+  z-index: 1;
+  font-family: sans-serif, serif;
+  color: #ccc;
+  opacity: 0.9;
+}
+
+@media (min-width: 850px) {
+  .quote-wrapper {
+    width: 370px;
+    height: 370px;
+  }
+  .quote-wrapper::before {
+    font-size: 300px;
+  }
+
+  .text p {
+    font-size: 26px;
+  }
+
+  .quote-wrapper blockquote footer {
+    bottom: 32px;
+  }
+}
+.fir-clickcircle {
+  height: 80px;
+  width: 80px;
+  border-radius: 100px;
+  cursor: pointer;
+}
+
+.fir-image-figure {
+  margin: 2%;
+  display: flex;
+  align-items: center;
+  margin-bottom: 40px;
+  position: relative;
+  text-decoration: none;
+}
+.fir-image-figure .caption, .fir-image-figure figcaption {
+  padding-left: 15px;
+}
+.fir-image-figure .fig-author-figure-title {
+  color: rgba(0, 0, 0, 0.4);
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  margin-top: 2px;
+}
+
+.fir-imageover {
+  position: relative;
+  display: flex;
 }
 
 /*# sourceMappingURL=style.css.map */
