--- a/sass/post/post.sass
+++ b/sass/post/post.sass
@@ -21,11 +21,14 @@ $myColor : rgba(0, 128, 172, 1)
   width: 100vw
   height: 100vh
   position: relative
-  background-color: red
+  // top: 0
+  // bottom: 0
+  // left: 0
+  // right: 0
   display: flex
   justify-content: center
   background-image: url('../../wow.jpg')
-  object-fit: contain
+  object-fit: cover
 
   .heroTitle
     z-index: 99
