--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,11 +5,14 @@
 @import './components/navBarHeader'
 @import './components/blogCard'
 @import './components/ctaContributor'
+@import './components/etiquetteBox'
+
 // Elements
 @import './elements/ctaButton'
+@import './elements/button'
+@import './elements/cardAuthorForCard'
 
-
-
+  
 //Posts
 @import './post/post'
 
