--- a/sass/components/ctaContributor.sass
+++ b/sass/components/ctaContributor.sass
@@ -1,7 +1,109 @@
-.ctaContributor
-   background-color:  black
-   padding: 3em
+// $accent-light:rgb(165, 46, 2)
 
-   .ctaTitle
-       color: white
-       
+.ctaContributor
+  display: flex
+  justify-content: center
+  align-items: center
+  flex-direction: column
+  border: 1px solid black
+  margin: 2vw
+  padding: 2vw
+  border-radius: 5px
+
+//   &.container
+//     > #singular-form
+//         > #input-container > input
+//         position: relative
+//         width: 100%
+//         height: 100%
+//         background-color: --main-color
+
+//         button
+//         width: 9rem
+//         padding: 0
+//         border: none
+//         outline: none
+//         border-radius: 3rem
+//         cursor: pointer
+
+//         >
+//         button#trigger
+//             padding: 0
+//             width: 100%
+//             color: $accent-light
+//             background-color: transparent
+//             z-index: 3
+
+//         #input-container
+//             z-index: 2
+
+//             >
+//             input
+//                 display: inline-block
+//                 height: 100%
+//                 width: 100%
+//                 background-color: var(--main-color)
+//                 box-sizing: border-box
+//                 border: none
+//                 outline: none
+//                 padding: 0 26% 0 3%
+//                 opacity: 0
+//                 transform: scale(0)
+//                 transition: all .4s ease .4s
+
+//             button
+//                 position: absolute
+//                 top: 0
+//                 right: 0
+//                 height: 100%
+//                 background-color: $accent-light
+//                 color: var(--main-color)
+//                 opacity: 0
+//                 transform: scale(0)
+//                 transition: all .4s ease .4s
+
+//         #success
+//             display: flex
+//             justify-content: center
+//             align-items: center
+//             color: $accent-light
+//             font-weight: bold
+//             z-index: 1
+
+//         button#trigger, #input-container, #success
+//             position: absolute
+//             top: 0
+//             right: 0
+//             bottom: 0
+//             left: 0
+//             transform: scale(0)
+//             opacity: 0
+
+//         button#trigger
+//             transition: all .4s ease
+
+//         #input-container
+//             transform: scale(1)
+//             opacity: 1
+//             transition: all .4s ease .4s
+
+//         #success
+//             transition: all .2s ease .4s
+
+//         button#trigger.shown, #input-container.shown, #success.shown
+//             transform: scale(1)
+//             opacity: 1
+
+//         #input-container >
+//             button.shown, input.shown
+//             transform: scale(1)
+//             opacity: 1
+
+//     width: 19rem
+//     height: 5rem
+//     padding: 10px
+//     background-color: var(--main-color)
+//     text-align: center
+//     border-radius: 3rem
+//     overflow: hidden
+//     transition: width 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55)  
