--- a/sass/components/profileCard.sass
+++ b/sass/components/profileCard.sass
@@ -11,8 +11,8 @@ $bg-light: rgb(248, 248, 248)
   flex-direction: column
   justify-content: center
   align-items: center
-  width: 60%
-  margin: 15vw auto
+  width: 350px
+  margin: 2vw auto
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24)
 
   p
