add effects: hyperlink, titleh1, etiquette

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -11,9 +11,11 @@
 @import './elements/ctaButton'
 @import './elements/button'
 @import './elements/cardAuthorForCard'
+@import './elements/titleh1.scss'
+@import './elements/etiquette.scss'
 
-  
 //Posts
+@import './post/hyperlinkEffect.scss'  
 @import './post/post'
 
 //Post elements  
