--- a/sass/post/post.sass
+++ b/sass/post/post.sass
@@ -1,43 +1,58 @@
 $myColor : rgba(0, 128, 172, 1)
+$prismeColor: #F39B6D
 
 // General post style
 .contentWrapper
   display: flex
   flex-direction: column
+  width: 100%
+  justify-content: center
+  align-items: center
 
+  .postContainer
+    justify-content: center
+    display: flex
+    flex-direction: column
+    width: 50%
 
   p
-    padding: 2%
-    margin: 5%
-    font-size: 2vw
+    font-size: 1.2em
+    margin: 2vh 2vh
 
-  h1
-    font-size: 5vw
-    padding: 2%
-    color: $myColor
+
+  .titleH2
+    font-weight: 900
+    font-size: 2em
+    color: $prismeColor
+    margin-left: 2%
+
+  .incipitBox p 
+    font-weight: 700
 
 // "Hero section"  
 .heroWrapper
   width: 100vw
   height: 100vh
   position: relative
-  // top: 0
-  // bottom: 0
-  // left: 0
-  // right: 0
   display: flex
   justify-content: center
-  background-image: url('../../wow.jpg')
-  object-fit: cover
+
+  img 
+    position: absolute
+    top: 2%
+    right: 5%
+    width: 50%
+    height: 70%
 
   .heroTitle
     z-index: 99
     position: absolute
     font-size: 5vw
-    color: white
     bottom: 5%
     left: 5%
     width: 50%
+    color: #d6d5d5
+
 
   .etiqueteBox
     position: absolute
@@ -48,19 +63,13 @@ $myColor : rgba(0, 128, 172, 1)
     display: flex
     flex-direction: row
 
-  & h2
-      border: 0.3vw solid white
-      border-radius: 5px
-      margin: 2%
-      padding: 2%
-
+    .heroEtiquette
+      color: $prismeColor
+      
 // Incipit box
 
 .incipitBox
   border-radius: 5px
-  margin : 2%
-  background-color: $myColor
-  color: white
   font-size: 1.5em
 
 
